--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jetifier": "^1.6.4",
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-elements": "^1.1.0",
     "react-native-flags": "^1.0.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-gravatar": "^1.0.2",
